--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/Main/index.html.twig
@@ -1,1 +1,6 @@
-Hola Mundo!
+{% extends 'HyundaiKromaBundle:Frontend:layout.html.twig' %}
+
+{% block title %}Hyundai{% endblock %}
+{% block content %}
+	<p>Hola Mundo!</p>
+{% endblock %}
