--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/macros.html.twig
@@ -1,10 +1,10 @@
-{% macro list(posts) %}
+{% macro list(brands) %}
 
 {% import 'SyliusResourceBundle:Macros:buttons.html.twig' as buttons %}
 {% import 'GeckoBackendBundle:Macros:alerts.html.twig' as alerts %}
 {% import 'GeckoBackendBundle:Macros:misc.html.twig' as misc %}
 
-{% if posts|length > 0 %}
+{% if brands|length > 0 %}
 <div class="box">
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover"><tbody>
@@ -14,15 +14,15 @@
 				<th>Fecha</th>
 				<th></th>
 			</tr>
-			{% for post in posts %}
+			{% for brand in brands %}
 	        <tr>
-				<td>{{ post.id }}</td>
-				<td>{{ post.title }}</td>
-				<td>{{ post.date|date('d-m-Y') }}</td>
+				<td>{{ brand.id }}</td>
+				<td>{{ brand.title }}</td>
+				<td>{{ brand.date|date('d-m-Y') }}</td>
 				<td>
 					<div class="pull-right">
-	                    {{ buttons.edit(path('hyundai_kroma_posts_update', {'id': post.id})) }}
-	                    {{ buttons.delete(path('hyundai_kroma_posts_delete', {'id': post.id})) }}
+	                    {{ buttons.edit(path('hyundai_kroma_brand_update', {'id': brand.id})) }}
+	                    {{ buttons.delete(path('hyundai_kroma_brand_delete', {'id': brand.id})) }}
 	                </div>
 				</td>
 			</tr>
