--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/_form.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/_form.html.twig
@@ -8,9 +8,12 @@
 	{{ form_row(form.name, { 'attr': {'class': 'form-control'} }) }}
 </div>
 <div class="form-group">
-	{{ form_row(form.resource, { 'attr': {'class': 'form-control'} }) }}
+	{{ form_row(form.type) }}
 </div>
 <div class="form-group">
-	{{ form_row(form.type, { 'attr': {'class': 'form-control'} }) }}
+   	{% if((form.vars.value.resource) and (form.vars.value.type == 'image')) %}
+    	<a href="{{ form.vars.value.resource|imagine_filter('gecko_gallery') }}" target="_blank"><img class="img-polaroid" src="{{ form.vars.value.resource|imagine_filter('gecko_image_90x60') }}" alt="" /></a>
+   	{% endif %}
+    {{ form_row(form.file) }}
 </div>
 {{ form_rest(form) }}
