--- a/src/Gecko/BackendBundle/Resources/views/Layout/header.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Layout/header.html.twig
@@ -1,7 +1,6 @@
 <header class="header">
 	<a href="index.html" class="logo">
-		<!-- Add the class icon to your logo image or logo icon to add the margining -->
-		Kroma Hyundai
+		<img src="{{ asset('bundles/geckobackend/images/logo.png') }}" height="50">
 	</a>
 	
 	<!-- Header Navbar: style can be found in header.less -->
