--- a/src/Gecko/BackendBundle/Resources/views/Security/login.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Security/login.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}      
 <div class="form-box" id="login-box">
+	<div class="logo"><img src="{{ asset('bundles/geckobackend/images/logo.png') }}"></div>
 	<div class="header">Panel de Administración</div>
 	<form action="{{ path('fos_user_security_check') }}" method="post">
 		<div class="body bg-gray">
