--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/_form.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/_form.html.twig
@@ -1,18 +1,24 @@
 <div class="form-group">
-	{{ form_row(form.brand, {'value': app.request.get('brand_id')}) }}
+	{{ form_row(form.brand, {'value': app.request.get('brand_id'), 'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
-	{{ form_row(form.category) }}
+	{{ form_row(form.category, { 'attr': {'class': 'form-control'} }) }}
 </div>
 <div class="form-group">
 	{{ form_row(form.name, { 'attr': {'class': 'form-control'} }) }}
 </div>
 <div class="form-group">
-	{{ form_row(form.type) }}
+	{{ form_row(form.type, { 'attr': {'class': 'form-control'} }) }}
 </div>
 <div class="form-group">
-   	{% if((form.vars.value.resource) and (form.vars.value.type == 'image')) %}
-    	<a href="{{ form.vars.value.resource|imagine_filter('gecko_gallery') }}" target="_blank"><img class="img-polaroid" src="{{ form.vars.value.resource|imagine_filter('gecko_image_90x60') }}" alt="" /></a>
+   	{% if(form.vars.value.resource) %}
+   	{%   if(form.vars.value.type == 'image') %}
+	<a href="{{ form.vars.value.resource|imagine_filter('gecko_gallery') }}" target="_blank"><img class="img-polaroid" src="{{ form.vars.value.resource|imagine_filter('gecko_image_90x60') }}" alt="" /></a>
+   	{%   elseif (form.vars.value.type == 'video') %}
+   	<video width="320" height="240" controls>
+  		<source src="{{ asset('media' ~ vich_uploader_asset(form.vars.value, 'file')) }}" type="video/mp4">
+	</video>
+    {%   endif %}
    	{% endif %}
     {{ form_row(form.file) }}
 </div>
