--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/index.html.twig
@@ -2,7 +2,7 @@
 
 {% import 'SyliusResourceBundle:Macros:buttons.html.twig' as buttons %}
 {% from 'GeckoBackendBundle:Macros:misc.html.twig' import pagination %}
-{% from 'HyundaiKromaBundle:Frontend/Branduser:macros.html.twig' import list  %}
+{% from 'HyundaiKromaBundle:Frontend/BrandUser:macros.html.twig' import list  %}
 
 {% block section_title %}
 <h1>Materiales</h1>
