--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/create.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/create.html.twig
@@ -3,13 +3,13 @@
 {% from 'SyliusResourceBundle:Macros:actions.html.twig' import create %}
 
 {% block section_title %}
-<h1>Materiales</h1>
+<h1>Marcas de Autos</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Materiales</li>
+	<li>Marcas de Autos</li>
 	<li class="active">Nuevo</li>
 </ol>
 {% endblock %}
