--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
@@ -31,15 +31,17 @@
 	</div>
 	<div class="box-body">
 		{% for resource in resourcesCategory.resources %}
-   		{% if(resource.type == 'image') %}
-		<img src="{{ resource.resource|imagine_filter('gecko_gallery') }}" alt="" style="max-height: 300px" />
-   		{% elseif (resource.type == 'video') %}
-   		<video width="320" height="240" controls>
-  			<source src="{{ asset('media' ~ vich_uploader_asset(resource, 'file')) }}" type="video/mp4">
-		</video>
-    	{% endif %}
-    	{{ resource.name }}
-    	<a href="{{ path('hyundai_kroma_branduser_download', {'filename': resource.resource}) }}">Descarga</a>
+		<div>
+   			{% if(resource.type == 'image') %}
+			<img src="{{ resource.resource|imagine_filter('gecko_gallery') }}" alt="" style="max-height: 300px" />
+   			{% elseif (resource.type == 'video') %}
+   			<video width="320" height="240" controls>
+  				<source src="{{ asset('media' ~ vich_uploader_asset(resource, 'file')) }}" type="video/mp4">
+			</video>
+    		{% endif %}
+    		<p>{{ resource.name }}</p>
+    		<a href="{{ path('hyundai_kroma_branduser_download', {'filename': resource.resource}) }}">Descarga</a>
+    	</div>
    		{% endfor %}
 	</div>
 </div>
