--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
@@ -37,7 +37,7 @@
 			</div>
 			<div class="box-body">
 	   			{% if(resource.type == 'image') %}
-				<img src="{{ resource.resource|imagine_filter('gecko_gallery') }}" alt="" style="max-width: 320px" />
+				<img src="{{ resource.resource|imagine_filter('gecko_gallery') }}" alt="" style="max-width: 320px;display: block;margin: 0 auto;" />
 	   			{% elseif (resource.type == 'video') %}
 	   			<video width="320" controls>
 	  				<source src="{{ asset('media' ~ vich_uploader_asset(resource, 'file')) }}" type="video/mp4">
