--- a/src/Gecko/BackendBundle/Resources/assets/css/backend-outside.css
+++ b/src/Gecko/BackendBundle/Resources/assets/css/backend-outside.css
@@ -1,3 +1,13 @@
+html, body {
+	height: 100%;
+	width: 100%;
+}
+
+body {
+	background: url(/bundles/geckobackend/images/background.jpg) no-repeat left bottom;
+	background-size: cover;	
+}
+
 .form-box .logo {
 	margin-bottom: 40px;
 }
