--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/Brand/index.html.twig
@@ -5,13 +5,13 @@
 {% from 'HyundaiKromaBundle:Frontend/Brand:macros.html.twig' import list  %}
 
 {% block section_title %}
-<h1>Marcas de Autos</h1>
+<h1>Productos</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li class="active">Marcas de Autos</li>
+	<li class="active">Productos</li>
 </ol>
 {% endblock %}
 
