--- a/src/Gecko/BackendBundle/Resources/views/Layout/sidebar.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Layout/sidebar.html.twig
@@ -7,7 +7,7 @@
 				<img src="img/avatar3.png" class="img-circle" alt="User Image" />
 			</div> -->
 			<div class="pull-left info">
-				<p>Hello, Administrador</p>	
+				<p>Hola, Administrador</p>	
 				<!-- <a href="#"><i class="fa fa-circle text-success"></i> Online</a>  -->
 			</div>
 		</div>
