--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/macros.html.twig
@@ -12,7 +12,7 @@
 				<th>ID</th>
 				<th>Categoria</th>
 				<th>Nombre</th>
-				<th>Tipo</th>
+				<th>Archivos</th>
 				<th></th>
 			</tr>
 			{% for brandresource in brandresources %}
@@ -20,11 +20,7 @@
 				<td>{{ brandresource.id }}</td>
 				<td>{{ brandresource.category }}</td>
 				<td>{{ brandresource.name }}</td>
-				{% if(brandresource.type == 'image') %}
-				<td>Imagen</td>
-				{% else %}
-				<td>Video</td>
-				{% endif %}
+				<td><a href="{{ path('hyundai_kroma_brandresourcefile_index', {'brandresource_id': brandresource.id}) }}">Administrar archivos({{ brandresource.files|length }})</a></td>
 				<td>
 					<div class="pull-right">
 	                    {{ buttons.edit(path('hyundai_kroma_brandresource_update', {'brand_id': brandresource.brand.id, 'id': brandresource.id})) }}
