--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
@@ -35,7 +35,11 @@
 			<div class="box-header">
 				<h4 class="box-title">{{ resource.name }}</h4>				
 			</div>
-			<a href="{{ path('hyundai_kroma_branduser_files', {'brandresource_id': resource.id}) }}">Ver archivos({{ resource.files|length }})</a>
+			<div class="box-body">
+				<div>
+					<a class="btn btn-app" style="margin: 0 auto; display: block;" href="{{ path('hyundai_kroma_branduser_files', {'brandresource_id': resource.id}) }}"><i class="fa fa-eye"></i> Ver {{ resource.files|length }} archivos</a>
+				</div>
+			</div>
     	</div>
    		{% endfor %}
 	</div>
