--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/macros.html.twig
@@ -11,6 +11,7 @@
 			<tr>
 				<th>ID</th>
 				<th>Recurso</th>
+				<th>Archivo</th>
 				<th>Tipo</th>
 				<th></th>
 			</tr>
@@ -18,6 +19,7 @@
 	        <tr>
 				<td>{{ brandresourcefile.id }}</td>
 				<td>{{ brandresourcefile.brandResource }}</td>
+				<td><a href="{{ path('hyundai_kroma_brandresourcefile_download', { 'id': brandresourcefile.id }) }}">Descargar {{ brandresourcefile.name }}</a></td>
 				{% if(brandresourcefile.type == 'image') %}
 				<td>Imagen</td>
 				{% elseif(brandresourcefile.type == 'video') %}
