--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/index.html.twig
@@ -18,6 +18,27 @@
 {% block content %}
 <h2 class="page-header">
 	{{ buttons.create(path('hyundai_kroma_brandresourcefile_create', {'brandresource_id': app.request.get('brandresource_id')}), 'Nuevo') }}
+	<a href="#" class="btn btn-primary multipleUploadButton">
+    	<i class="icon-plus-sign"></i><span>Subida múltiple</span>
+	</a>
+	
+	<div class="multipleUpload well">
+		<!-- The fileinput-button span is used to style the file input field as button -->
+	    <span class="btn btn-success fileinput-button">
+	        <i class="glyphicon glyphicon-plus"></i>
+	        <span>Seleccionar archivos...</span>
+	        <!-- The file input field used as target for the file upload widget -->
+	        <input id="fileupload" type="file" name="files[]" data-upload-url="{{ path('hyundai_kroma_brandresourcefile_multiple_create', {'brandresource_id': app.request.get('brandresource_id')}) }}" multiple>
+	    </span>
+	    <br>
+	    <br>
+	    <!-- The global progress bar -->
+	    <div id="progress" class="progress">
+	        <div class="progress-bar progress-bar-success"></div>
+	    </div>
+	    <!-- The container for the uploaded files -->
+	    <div id="files" class="files"></div>
+	</div>
 </h2>
 
 {{ list(brandresourcefiles)  }}
