--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
@@ -9,7 +9,7 @@
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Marcas de Autos</li>
+	<li>Productos</li>
 	<li class="active">{{ brand.title }}</li>
 </ol>
 {% endblock %}
