--- a/src/Gecko/BackendBundle/Resources/views/Security/login.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Security/login.html.twig
@@ -3,7 +3,7 @@
 {% block content %}      
 <div class="form-box" id="login-box">
 	{#<div class="logo"><img src="{{ asset('bundles/geckobackend/images/logo.png') }}"></div>#}
-	<div class="header">Panel de Administración</div>
+	<div class="header">Log In</div>
 	<form action="{{ path('fos_user_security_check') }}" method="post">
 		<div class="body bg-gray">
 			{% if error %}
@@ -12,17 +12,17 @@
     			</div>
     		{% endif %}
 			<div class="form-group">
-				<input type="text" name="_username" class="form-control" placeholder="Usuario"/>
+				<input type="text" name="_username" class="form-control" placeholder="Username"/>
 			</div>
 			<div class="form-group">
-				<input type="password" name="_password" class="form-control" placeholder="Contraseña"/>
+				<input type="password" name="_password" class="form-control" placeholder="Password"/>
 			</div>          
 			<!-- <div class="form-group">
 				<input type="checkbox" name="remember_me"/> Remember me
 			</div> -->
 		</div>
-		<div class="footer">                                                               
-			<button type="submit" class="btn bg-olive btn-block">Ingresar</button>  
+		<div class="footer bg-gray">                                                               
+			<button type="submit" class="btn btn-block">Enter</button>  
 			<!-- <p><a href="#">I forgot my password</a></p> -->
 			<!-- <a href="register.html" class="text-center">Register a new membership</a> -->
 		</div>
