--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/create.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/create.html.twig
@@ -3,14 +3,14 @@
 {% from 'SyliusResourceBundle:Macros:actions.html.twig' import create %}
 
 {% block section_title %}
-<h1>Recursos</h1>
+<h1>Resources</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li><a href="{{ path('hyundai_kroma_brandresource_index', {'brand_id': app.request.get('brand_id')}) }}">Recursos</a></li>
-	<li class="active">Nuevo</li>
+	<li><a href="{{ path('hyundai_kroma_brandresource_index', {'brand_id': app.request.get('brand_id')}) }}">Resources</a></li>
+	<li class="active">New</li>
 </ol>
 {% endblock %}
 
