--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/create.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/create.html.twig
@@ -3,14 +3,14 @@
 {% from 'SyliusResourceBundle:Macros:actions.html.twig' import create %}
 
 {% block section_title %}
-<h1>Categorias</h1>
+<h1>Category</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Categorias</li>
-	<li class="active">Nuevo</li>
+	<li>Category</li>
+	<li class="active">New</li>
 </ol>
 {% endblock %}
 
