--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/index.html.twig
@@ -5,19 +5,19 @@
 {% from 'HyundaiKromaBundle:Frontend/BrandResourceCategory:macros.html.twig' import list  %}
 
 {% block section_title %}
-<h1>Categorias</h1>
+<h1>Category</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li class="active">Categorias</li>
+	<li class="active">Category</li>
 </ol>
 {% endblock %}
 
 {% block content %}
 <h2 class="page-header">
-	{{ buttons.create(path('hyundai_kroma_brandresourcecategory_create'), 'Nuevo') }}
+	{{ buttons.create(path('hyundai_kroma_brandresourcecategory_create'), 'New') }}
 </h2>
 
 {{ list(brandresourcecategories)  }}
