--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/update.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceFile/update.html.twig
@@ -9,8 +9,8 @@
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li><a href="{{ path('hyundai_kroma_brandresourcefile_index', {'brandresource_id': brandresourcefile.brandresource.id}) }}">Archivos</a></li>
-	<li class="active">Editar</li>
+	<li><a href="{{ path('hyundai_kroma_brandresourcefile_index', {'brandresource_id': brandresourcefile.brandresource.id}) }}">Files</a></li>
+	<li class="active">Edit</li>
 </ol>
 {% endblock %}
 
