--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/User/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/User/index.html.twig
@@ -5,13 +5,13 @@
 {% from 'HyundaiKromaBundle:Frontend/User:macros.html.twig' import list  %}
 
 {% block section_title %}
-<h1>Usuarios</h1>
+<h1>Users</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li class="active">Usuarios</li>
+	<li class="active">Users</li>
 </ol>
 {% endblock %}
 
