--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/User/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/User/macros.html.twig
@@ -9,8 +9,8 @@
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover"><tbody>
 			<tr>
-				<th>Nombre y Apellido</th>
-				<th>Nombre Usuario</th>
+				<th>Fullname</th>
+				<th>Username</th>
 				<th>Email</th>
 				<th></th>
 			</tr>
