--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/User/update.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/User/update.html.twig
@@ -3,14 +3,14 @@
 {% from 'SyliusResourceBundle:Macros:actions.html.twig' import update %}
 
 {% block section_title %}
-<h1>Usuarios</h1>
+<h1>Users</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Usuarios</li>
-	<li class="active">Editar</li>
+	<li>Users</li>
+	<li class="active">Edit</li>
 </ol>
 {% endblock %}
 
