--- a/src/Gecko/BackendBundle/Resources/views/Layout/Header/userAccount.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Layout/Header/userAccount.html.twig
@@ -1,14 +1,14 @@
 <li class="dropdown user user-menu">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 		<i class="glyphicon glyphicon-user"></i>
-		<span>Administrador<i class="caret"></i></span>
+		<span>Account<i class="caret"></i></span>
 	</a>
 	<ul class="dropdown-menu">
 		<!-- User image -->
 		<li class="user-header bg-light-blue">
 			<!-- <img src="img/avatar3.png" class="img-circle" alt="User Image" /> -->
 			<p>
-				Administrador
+				Account
 				<!-- <small>Member since Nov. 2012</small> -->
 			</p>
 		</li>
@@ -20,11 +20,8 @@
 		</li> -->
 		<!-- Menu Footer-->
 		<li class="user-footer">
-			<div class="pull-left">
-				<a href="#" class="btn btn-default btn-flat">Ver Sitio</a>
-			</div>
 			<div class="pull-right">
-				<a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btn-flat">Salir</a>
+				<a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btn-flat">Logout</a>
 			</div>
 		</li>
 	</ul>
