--- a/src/Gecko/BackendBundle/Resources/views/layout.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/layout.html.twig
@@ -8,8 +8,10 @@
         {% block stylesheets %}
             {% stylesheets output='css/backend.min.css' filter='cssrewrite'
                 '//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'
-                '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css'
+                '//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'
                 'http://code.ionicframework.com/ionicons/1.4.1/css/ionicons.min.css'
+                'bundles/geckobackend/css/fonts.css'
+                'bundles/geckobackend/css/jstree/default/style.min.css'
                 '@GeckoBackendBundle/Resources/assets/css/AdminLTE.css'
                 '@GeckoBackendBundle/Resources/assets/css/backend.css'
                 '@GeckoBackendBundle/Resources/assets/css/jquery.fileupload-ui.css'
@@ -57,6 +59,10 @@
 			 </aside><!-- /.right-side -->
         </div><!-- ./wrapper -->
         
+        <footer>
+        	<p>For more information, please contact: <a href="mailto:lopez@hyundaipr.com">lopez@hyundaipr.com</a> (Neisha López-Cepero) <a href="mailto:iralis@kromaidea.com">iralis@kromaidea.com</a> (Iralis Jiménez).</p>
+        </footer>
+        
         {# javascripts... #}
         {% block javascripts %}
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -67,6 +73,8 @@
             '@GeckoBackendBundle/Resources/assets/js/AdminLTE/app.js'
             '@GeckoBackendBundle/Resources/assets/js/jquery.iframe-transport.js'
             '@GeckoBackendBundle/Resources/assets/js/jquery.fileupload.js'
+            '@GeckoBackendBundle/Resources/assets/js/jstree.min.js'
+            '@GeckoBackendBundle/Resources/assets/js/resources.js'
             '@GeckoBackendBundle/Resources/assets/js/backend.js'
         %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
