--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/update.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResource/update.html.twig
@@ -3,14 +3,14 @@
 {% from 'SyliusResourceBundle:Macros:actions.html.twig' import update %}
 
 {% block section_title %}
-<h1>Recursos</h1>
+<h1>Resources</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li><a href="{{ path('hyundai_kroma_brandresource_index', {'brand_id': brandresource.brand.id}) }}">Recursos</a></li>
-	<li class="active">Editar</li>
+	<li><a href="{{ path('hyundai_kroma_brandresource_index', {'brand_id': brandresource.brand.id}) }}">Resources</a></li>
+	<li class="active">Edit</li>
 </ol>
 {% endblock %}
 
