--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandResourceCategory/macros.html.twig
@@ -9,7 +9,7 @@
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover"><tbody>
 			<tr>
-				<th>Nombre</th>
+				<th>Name</th>
 				<th></th>
 			</tr>
 			{% for brandresourcecategory in brandresourcecategories %}
