--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/files.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/files.html.twig
@@ -3,13 +3,13 @@
 {% import 'SyliusResourceBundle:Macros:buttons.html.twig' as buttons %}
 
 {% block section_title %}
-<h1>Archivos de '{{ brandResource.name }}' del producto '{{ brandResource.brand.title }}'</h1>
+<h1>'{{ brandResource.name }}' files of the product: '{{ brandResource.brand.title }}'</h1>
 {% endblock %}
 
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Productos</li>
+	<li>Products</li>
 	<li>{{ brandResource.brand }}</li>
 	<li class="active">{{ brandResource.name }}</li>
 </ol>
@@ -18,7 +18,7 @@
 {% block content %}
 <h2 class="page-header">
 	<a href="{{ path('hyundai_kroma_branduser_download_all', {'brandresource_id': brandResource.id}) }}" class="btn btn-primary">
-    	<i class="icon-plus-sign"></i><span>Descargar todos</span>
+    	<i class="icon-plus-sign"></i><span>Download all</span>
 	</a>
 </h2>
 <div class="box box-primary">
@@ -26,10 +26,10 @@
 		<table class="table table-hover">
 		<thead>
 			<tr>
-				<th>Nombre</th>
-				<th>Fecha</th>
-				<th>Tipo</th>
-				<th>Tamaño</th>
+				<th>Name</th>
+				<th>Date</th>
+				<th>Type</th>
+				<th>Size</th>
 				<th></th>
 			</tr>
 		</thead>
@@ -41,10 +41,10 @@
 					{{ file.name }}
 				</td>
 				<td>{{ file.createdAt|date("d/m/Y") }}</td>
-				<td>Archivo {{ file.extension|upper }}</td>
+				<td>File {{ file.extension|upper }}</td>
 				<td>{{ file.size }}</td>
 				<td>
-					<a class="btn btn-app" style="margin: 0 auto; display: block;height: 46px;padding:5px;" href="{{ path('hyundai_kroma_brandresourcefile_download', {'id': file.id}) }}"><i class="fa fa-save"></i> Descargar</a>
+					<a class="btn btn-app" style="margin: 0 auto; display: block;height: 46px;padding:5px;" href="{{ path('hyundai_kroma_brandresourcefile_download', {'id': file.id}) }}"><i class="fa fa-save"></i> Download</a>
 				</td>
 			</tr>
 		{% endfor %}
