--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/macros.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/macros.html.twig
@@ -10,9 +10,9 @@
 		<table class="table table-hover"><tbody>
 			<tr>
 				<th></th>
-				<th>Título</th>
-				<th>Descripción</th>
-				<th>Cant. de recursos</th>
+				<th>Title</th>
+				<th>Description</th>
+				<th>Resources quantity</th>
 				<th></th>
 			</tr>
 			{% for brand in brands %}
