--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/BrandUser/show.html.twig
@@ -9,7 +9,7 @@
 {% block breadcrums %}
 <ol class="breadcrumb">
 	<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-	<li>Productos</li>
+	<li>Products</li>
 	<li class="active">{{ brand.title }}</li>
 </ol>
 {% endblock %}
@@ -18,7 +18,7 @@
 <div class="box">
 	<div class="box-header">
 		<i class="fa fa-info"></i>
-		<h3 class="box-title">Descripción</h3>
+		<h3 class="box-title">Description</h3>
 	</div>
 	<div class="box-body">
 		<p>{{ brand.description }}</p>
@@ -37,7 +37,7 @@
 			</div>
 			<div class="box-body">
 				<div>
-					<a class="btn btn-app" style="margin: 0 auto; display: block;" href="{{ path('hyundai_kroma_branduser_files', {'brandresource_id': resource.id}) }}"><i class="fa fa-eye"></i> Ver {{ resource.files|length }} archivos</a>
+					<a class="btn btn-app" style="margin: 0 auto; display: block;" href="{{ path('hyundai_kroma_branduser_files', {'brandresource_id': resource.id}) }}"><i class="fa fa-eye"></i> View {{ resource.files|length }} files</a>
 				</div>
 			</div>
     	</div>
