--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/Main/dashboard.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/Main/dashboard.html.twig
@@ -1,7 +1,7 @@
 {% extends 'GeckoBackendBundle::layout.html.twig' %}
 
 {% block section_title %}
-<h1>Dashboard <small>Bienvenido</small></h1>
+<h1>Dashboard <small>Welcome</small></h1>
 {% endblock %}
 
 {% block breadcrums %}
