--- a/src/Gecko/BackendBundle/Resources/views/Layout/header.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/Layout/header.html.twig
@@ -1,5 +1,5 @@
 <header class="header">
-	<a href="index.html" class="logo">
+	<a href="#" class="logo">
 		<img src="{{ asset('bundles/geckobackend/images/logo.png') }}" height="50">
 	</a>
 	
