--- a/src/Gecko/BackendBundle/Resources/views/layout.html.twig
+++ b/src/Gecko/BackendBundle/Resources/views/layout.html.twig
@@ -60,7 +60,7 @@
         </div><!-- ./wrapper -->
         
         <footer>
-        	<p>For more information, please contact: <a href="mailto:lopez@hyundaipr.com">lopez@hyundaipr.com</a> (Neisha López-Cepero) <a href="mailto:iralis@kromaidea.com">iralis@kromaidea.com</a> (Iralis Jiménez).</p>
+        	<p>For more information, please contact: <a href="mailto:nlopez@hyundaipr.com">nlopez@hyundaipr.com</a> (Neisha López-Cepero) <a href="mailto:iralis@kromaidea.com">iralis@kromaidea.com</a> (Iralis Jiménez).</p>
         </footer>
         
         {# javascripts... #}
