--- a/src/Hyundai/KromaBundle/Resources/views/Frontend/User/index.html.twig
+++ b/src/Hyundai/KromaBundle/Resources/views/Frontend/User/index.html.twig
@@ -17,7 +17,7 @@
 
 {% block content %}
 <h2 class="page-header">
-	{{ buttons.create(path('hyundai_kroma_user_create'), 'Nuevo') }}
+	{{ buttons.create(path('hyundai_kroma_user_create'), 'New') }}
 </h2>
 
 {{ list(users)  }}
